Update UAVSAR Test 11
DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -2191,14 +2191,7 @@
     "\n",
     "This test combines a bounding box spatial subset with a variable subset (`Band1`). The requested output will be a `.gif` format file.\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands.\n",
-    "\n",
-    "# TO FIX: Request gets `gdal_translate` error:\n",
-    "\n",
-    "```\n",
-    "2022-04-08T17:24:25.825Z [debug]: INFO:root:gdal_translate '-of' 'GIF' '-scale' '/tmp/tmpke2epqg1/result.tif' '/tmp/tmpke2epqg1/translated.gif'\n",
-    "2022-04-08T17:24:25.911Z [debug]: ERROR 6: GIF driver only supports one band images.\n",
-    "```"
+    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\")."
    ]
   },
   {
@@ -2208,7 +2201,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1422449017-ASF',\n",
     "                Environment.UAT: 'G1244144733-EEDTEST',\n",
@@ -2224,33 +2216,32 @@
     "    uavsar_output_eleven = make_request_and_download_result(harmony_client, uavsar_request_eleven,\n",
     "                                                            uavsar_directory_eleven)\n",
     "\n",
-    "    uavsar_variables_eleven = {'Band1', 'Band2', 'Band3', 'Band4'}\n",
-    "\n",
     "    expected_uavsar_results_eleven = {'authority': None,\n",
     "                                      'cs': None,\n",
     "                                      'file_type': 'gif',\n",
     "                                      'gcs': None,\n",
     "                                      'gcs_epsg': None,\n",
-    "                                      'n_bands': 4,\n",
+    "                                      'n_bands': 1,\n",
     "                                      'proj_cs': None,\n",
     "                                      'proj_epsg': None,\n",
-    "                                      # 'reference_image': 'reference_images/uavsar_query11_reference.tiff',\n",
+    "                                      'reference_image': 'reference_images/uavsar_reference_eleven.tiff',\n",
     "                                      'spatial_extent': [64.0, 64.1, -145.75, -145.70],\n",
-    "                                      'variables': uavsar_variables_eleven,\n",
+    "                                      'variables': {},\n",
     "                                      'width': 450, \n",
     "                                      'height': 1800}\n",
     "    \n",
     "    check_request_output(uavsar_output_eleven[0], expected_uavsar_results_eleven)\n",
     "    clean_test_artefacts(uavsar_directory_eleven)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
-    "\"\"\""
+    "    print('Skipping test: HGA regression tests not configured for this environment.')"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cbef55ec",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## GHRSST Level 4 MUR Global Foundation Sea Surface Temperature Analysis\n",
     "\n",
