Disable AVNIR and UAVSAR test case 10
We noticed some strange behavior with creating png output
when the input has multiple bands. Any of these requests will return same
output: ` ['Band3', 'Band2', 'Band1'], ['Band2', 'Band1'], ['Band1']` and we
think that the code is only writing the last band in the request to the png.
We will follow up and see if this is functionality that people need or not and
either prevent these types of requests or fix the output in the future.

DAS-1480

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -617,7 +617,17 @@
     "\n",
     "The input `.zip` file contains 4 Image GeoTIFFs, one per band each representing a spectrum range. \n",
     "\n",
-    "For a `.png` output, the authority and projection can't be derived from the output file, so several of the tested properties are `None` for this test case."
+    "For a `.png` output, the authority and projection can't be derived from the output file, so several of the tested properties are `None` for this test case.\n",
+    "\n",
+    "## Test Disabled\n",
+    "\n",
+    "TODO [06/21/2022]: We noticed some strange behavior with creating png output\n",
+    "when the input has multiple bands. Any of these requests will return same\n",
+    "output: ` ['Band3', 'Band2', 'Band1'], ['Band2', 'Band1'], ['Band1']` and we\n",
+    "think that the code is only writing the last band in the request to the png.\n",
+    "We will follow up and see if this is functionality that people need or not and\n",
+    "either prevent these types of requests or fix the output in the future.  The\n",
+    "new test should also verify against a reference image.  (same note as for UAVSAR test case 10.)\n"
    ]
   },
   {
@@ -627,6 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1813212660-ASF',\n",
     "                Environment.UAT: 'G1244144597-EEDTEST',\n",
@@ -660,7 +671,8 @@
     "    check_request_output(avnir_output_ten[0], expected_avnir_results_ten)\n",
     "    clean_test_artefacts(avnir_directory_ten)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
+    "\"\"\""
    ]
   },
   {
@@ -2135,7 +2147,17 @@
     "\n",
     "This test combines a bounding box spatial subset with a variable subset (`Band1`). The requested output will be a `.png` format file.\n",
     "\n",
-    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands."
+    "Each input variable for the UAVSAR POLSAR Pauli collection is a science variable (e.g., \"HH - VV\") and has four colour bands, so the output is expected to have a total of 4 bands.\n",
+    "\n",
+    "## Test Disabled\n",
+    "\n",
+    "TODO [06/21/2022]: We noticed some strange behavior with creating png output\n",
+    "when the input has multiple bands. Any of these requests will return same\n",
+    "output: ` ['Band3', 'Band2', 'Band1'], ['Band2', 'Band1'], ['Band1']` and we\n",
+    "think that the code is only writing the last band in the request to the png.\n",
+    "We will follow up and see if this is functionality that people need or not and\n",
+    "either prevent these types of requests or fix the output in the future.  The\n",
+    "new test should also verify against a reference image.  (same note as for AVNIR test case 10.)\n"
    ]
   },
   {
@@ -2145,6 +2167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1422449017-ASF',\n",
     "                Environment.UAT: 'G1244144733-EEDTEST',\n",
@@ -2179,7 +2202,8 @@
     "    check_request_output(uavsar_output_ten[0], expected_uavsar_results_ten)\n",
     "    clean_test_artefacts(uavsar_directory_ten)\n",
     "else:\n",
-    "    print('Skipping test: HGA regression tests not configured for this environment.')"
+    "    print('Skipping test: HGA regression tests not configured for this environment.')\n",
+    "\"\"\""
    ]
   },
   {
