--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -930,7 +930,7 @@
     "\n",
     "    plot_variable(hoss_maskfill_file_name, '/Grid/precipitationCal', '/Grid/lon', '/Grid/lat',\n",
     "                  title='HOSS/MaskFill polygon spatial subset.',\n",
-    "                  colourbar_units='Calibrated precipitation ($\\mathrm{mm.hr}^{-1}$)',\n",
+    "                  colourbar_units='Calibrated precipitation ($\\mathrm{mm\ hr}^{-1}$)',\n",
     "                  x_label='Longitude (degrees east)', y_label='Latitude (degrees north)',\n",
     "                  levels=np.linspace(0, 30, 31))\n",
     "\n",
