DAS-1453 - Clean up download logic.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -170,10 +170,9 @@
     "        for filename in [file_future.result()\n",
     "                         for file_future\n",
     "                         in harmony_client.download_all(job_id, overwrite=True)]:\n",
-    "            # Following condition avoids .sha256 files included with GEDI L4A\n",
-    "            if filename.endswith(('nc4', 'nc', 'subsetted.h5', )):\n",
-    "                print(f'Downloaded: {filename}')\n",
-    "                downloaded_filename = filename\n",
+    "\n",
+    "            print(f'Downloaded: {filename}')\n",
+    "            downloaded_filename = filename\n",
     "\n",
     "        if downloaded_filename is not None:\n",
     "            replace(downloaded_filename, output_file_name)\n",
@@ -930,7 +929,7 @@
     "\n",
     "    plot_variable(hoss_maskfill_file_name, '/Grid/precipitationCal', '/Grid/lon', '/Grid/lat',\n",
     "                  title='HOSS/MaskFill polygon spatial subset.',\n",
-    "                  colourbar_units='Calibrated precipitation ($\\mathrm{mm\ hr}^{-1}$)',\n",
+    "                  colourbar_units='Calibrated precipitation ($\\mathrm{mm\\,hr}^{-1}$)',\n",
     "                  x_label='Longitude (degrees east)', y_label='Latitude (degrees north)',\n",
     "                  levels=np.linspace(0, 30, 31))\n",
     "\n",
