DAS-1453 - Add HOSS/MaskFill chained service regression test.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -170,10 +170,9 @@
     "        for filename in [file_future.result()\n",
     "                         for file_future\n",
     "                         in harmony_client.download_all(job_id, overwrite=True)]:\n",
-    "            # Following condition avoids .sha256 files included with GEDI L4A\n",
-    "            if filename.endswith(('nc4', 'nc', 'h5', )):\n",
-    "                print(f'Downloaded: {filename}')\n",
-    "                downloaded_filename = filename\n",
+    "\n",
+    "            print(f'Downloaded: {filename}')\n",
+    "            downloaded_filename = filename\n",
     "\n",
     "        if downloaded_filename is not None:\n",
     "            replace(downloaded_filename, output_file_name)\n",
@@ -282,6 +281,10 @@
     "        variable_slice = masked_variable[0][:]\n",
     "    else:\n",
     "        variable_slice = masked_variable\n",
+    "\n",
+    "    # Some data are lon, lat rather than lat, lon (Python is row, column)\n",
+    "    if variable_slice.shape == (len(x_values[:]), len(y_values[:])):\n",
+    "        variable_slice = variable_slice.T\n",
     "\n",
     "    # Plot masked data:\n",
     "    colour_scale = ax.contourf(x_values[:], y_values[:], variable_slice, levels=levels)\n",
@@ -877,6 +880,66 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5dbe0de",
+   "metadata": {},
+   "source": [
+    "## HOSS/MaskFill chained service request:\n",
+    "\n",
+    "This request uses the chained service that combines HOSS with MaskFill to offer polygon spatial subsetting for L3/L4 gridded data hosted in OPeNDAP. This request will use a GeoJSON shape file of the Amazon River basin and the GPM/IMERG test collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd8aa94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hoss_maskfill_env = {Environment.UAT: {'collection': Collection(id='C1245618475-EEDTEST'),\n",
+    "                                       'shape_file_path': 'amazon_basin.geo.json',\n",
+    "                                       'granule_id': 'G1245649517-EEDTEST'}}\n",
+    "\n",
+    "if harmony_environment in hoss_maskfill_env:\n",
+    "    hoss_maskfill_info = hoss_maskfill_env[harmony_environment]\n",
+    "else:\n",
+    "    hoss_maskfill_info = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c91f8443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_maskfill_info is not None:\n",
+    "    hoss_maskfill_file_name = 'hoss_maskfill_amazon.nc4'\n",
+    "    hoss_maskfill_request = Request(collection=hoss_maskfill_info['collection'],\n",
+    "                                    granule_id=hoss_maskfill_info['granule_id'],\n",
+    "                                    shape=hoss_maskfill_info['shape_file_path'],\n",
+    "                                    variables=['/Grid/precipitationCal'])\n",
+    "\n",
+    "    submit_and_download(harmony_client, hoss_maskfill_request, hoss_maskfill_file_name)\n",
+    "    assert exists(hoss_maskfill_file_name), 'Unsuccessful HOSS/MaskFill polygon spatial subset request.'\n",
+    "\n",
+    "    expected_variables = ['/Grid/lat', '/Grid/lat_bnds', '/Grid/lon', '/Grid/lon_bnds', '/Grid/time',\n",
+    "                          '/Grid/time_bnds', '/Grid/precipitationCal']\n",
+    "    assert all_variables_present(hoss_maskfill_file_name, expected_variables), 'Missing variables in HOSS/MaskFill output'\n",
+    "\n",
+    "\n",
+    "    plot_variable(hoss_maskfill_file_name, '/Grid/precipitationCal', '/Grid/lon', '/Grid/lat',\n",
+    "                  title='HOSS/MaskFill polygon spatial subset.',\n",
+    "                  colourbar_units='Calibrated precipitation ($\\mathrm{mm\\,hr}^{-1}$)',\n",
+    "                  x_label='Longitude (degrees east)', y_label='Latitude (degrees north)',\n",
+    "                  levels=np.linspace(0, 30, 31))\n",
+    "\n",
+    "    print_success('HOSS/MaskFill polygon spatial subset request.')\n",
+    "else:\n",
+    "    print(f'HOSS/MaskFill chained service is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "189df669-2856-470a-8eee-01d359d3a59d",
    "metadata": {},
    "source": [
@@ -894,7 +957,7 @@
    "source": [
     "maskfill_env = {Environment.UAT: {'collection': Collection(id='C1240150677-EEDTEST'),\n",
     "                                  'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                  'granule_id': 'G1240154805-EEDTEST'}}\n",
+    "                                  'granule_id': 'G1245558666-EEDTEST'}}\n",
     "\n",
     "if harmony_environment in maskfill_env:\n",
     "    maskfill_info = maskfill_env[harmony_environment]\n",
@@ -972,7 +1035,7 @@
     "                                              'granule_id': 'G1242274836-EEDTEST',\n",
     "                                              'shape_file_path': 'amazon_basin.geo.json',\n",
     "                                              'variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
-    "                                                           '/BEAM0000/lat_lowestmode', '/BEAM0000/lon_lowestmode']}}\n",
+    "                                                            '/BEAM0000/lat_lowestmode', '/BEAM0000/lon_lowestmode']}}\n",
     "\n",
     "if harmony_environment in trajectory_subsetter_env:\n",
     "    trajectory_subsetter_info = trajectory_subsetter_env[harmony_environment]\n",
@@ -1110,9 +1173,7 @@
    "source": [
     "### Trajectory Subsetter polygon spatial subset request:\n",
     "\n",
-    "The request below combines a variable subset with the Amazon river basin polygon. The output should constrained to be extent of this polygon.\n",
-    "\n",
-    "The following test is disabled. For this service, EDSC seems to be converting the shape file to a bounding box. Making requests via `harmony-py` alone is resulting in not using the shape file. Will investigate."
+    "The request below combines a variable subset with the Amazon river basin polygon. The output should constrained to be extent of this polygon."
    ]
   },
   {
@@ -1122,7 +1183,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
     "if trajectory_subsetter_info is not None:\n",
     "    ts_polygon_file_name = 'trajectory_subsetter_polygon.h5'\n",
     "    ts_polygon_request = Request(collection=trajectory_subsetter_info['collection'],\n",
@@ -1149,8 +1209,7 @@
     "\n",
     "    print_success('Trajectory Subsetter polygon spatial subset request.')\n",
     "else:\n",
-    "    print(f'Trajectory Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')\n",
-    "\"\"\""
+    "    print(f'Trajectory Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
@@ -1203,7 +1262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
