address PR feedback
DAS-1479

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -1468,8 +1468,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
     "if environment_information is not None:\n",
     "    granules = {Environment.PROD: 'G1715962900-ASF',\n",
     "                Environment.UAT: 'G1244144618-EEDTEST',\n",
@@ -1483,7 +1481,7 @@
     "    try: \n",
     "        harmony_client.wait_for_processing(sentinel_job_id_thirteen, show_progress=True)\n",
     "    except Exception as exception:\n",
-    "        assert re.search(\"Request cannot be completed: datasets are incompatible and cannot be combined.\", str(exception)), 'Exception not raised correctly'\n",
+    "        assert \"Request cannot be completed: datasets are incompatible and cannot be combined.\" in str(exception), 'Exception not raised correctly'\n",
     "    print_success('Test raised expected Exception')\n",
     "else:\n",
     "    print('Skipping test: HGA regression tests not configured for this environment.')\n"
