DAS-1528 - Update comment regarding production collections.

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "This includes the Harmony `Client` object and `Collection` objects for each of the collections for which there are regression tests. The local, SIT and UAT Harmony instances all utilise resources from CMR UAT, meaning any non-production environment will use the same resources.\n",
     "\n",
-    "When adding a production entry to the dictionary below, the collection instances can be included directly in the dictionary, as they do not need to be shared."
+    "When adding a production entry to the dictionary below, the collection instances can be included directly in the production dictionary entry, as they do not need to be shared."
    ]
   },
   {
