DAS-1499 - Fix typos.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -639,7 +639,7 @@
    "source": [
     "## Harmony OPeNDAP SubSetter (HOSS):\n",
     "\n",
-    "HOSS is currently deployed to Sandbox, SIT, UAT and production. However, it is only associated with collections in UAT. Requests will be made against the RSSMIF16D collection, as mirrorer in the EEDTEST CMR provider in UAT."
+    "HOSS is currently deployed to Sandbox, SIT, UAT and production. However, it is only associated with collections in UAT. Requests will be made against the RSSMIF16D collection, as mirrored in the EEDTEST CMR provider in UAT."
    ]
   },
   {
@@ -907,10 +907,10 @@
     "\n",
     "Furthermore, the temporal dimension and the science variable (`/H1000`) will be limited to the specified temporal range. MERRA-2 is gridded at hourly intervals, so the 4-hour time range (12pm - 4pm on 9th June 2021) will return 4 time values.\n",
     "\n",
-    "For the granule being tested, all time values are expressed as minutes since 2021-06-09T00:30:00Z, and each pixel spans 30 minutes in either direction from the stated value (cells are centre-aligned). As such:\n",
+    "For the granule being tested, all time values are expressed as minutes since 2021-06-09T00:30:00Z, and each grid-cell spans 30 minutes in either direction from the stated value (cells are centre-aligned). As such:\n",
     "\n",
-    "* 12pm is the leading edge of the cell centred at 12:30pm, which is 720 minutes since 00:30am.\n",
-    "* 4pm is the trailing edge of the cell centred at 15:30pm, which is 900 minutes since 00:30am."
+    "* 12pm is the leading edge of the cell with a centre value of 12:30pm, which is 720 minutes since 00:30am.\n",
+    "* 4pm is the trailing edge of the cell with a centre value of 15:30pm, which is 900 minutes since 00:30am."
    ]
   },
   {
