DAS-1499 - Update HOSS to use EEDTEST RSSMIF16D collection.

--- a/test/sds/SDS_Regression.ipynb
+++ b/test/sds/SDS_Regression.ipynb
@@ -52,7 +52,7 @@
     "from typing import List\n",
     "\n",
     "from h5py import File as H5File\n",
-    "from harmony import BBox, Client, Collection, Environment, Request\n",
+    "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
     "from harmony.harmony import ProcessingFailedException\n",
     "from netCDF4 import Dataset\n",
     "import matplotlib.pyplot as plt\n",
@@ -98,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_environment = {'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
+    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
     "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
     "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
     "\n",
@@ -156,9 +157,7 @@
    "source": [
     "def submit_and_download(harmony_client: Client, request: Request, output_file_name: str):\n",
     "    \"\"\" Submit a Harmony request via a `harmony-py` client. Wait for the Harmony job to\n",
-    "        finish, then download the results to the specified file path. Care is taken to\n",
-    "        avoid any unexpected output files, such as `.sha256` files associated with the\n",
-    "        GEDI L4A collection.\n",
+    "        finish, then download the results to the specified file path.\n",
     "\n",
     "    \"\"\"\n",
     "    downloaded_filename = None\n",
@@ -346,8 +345,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swath_projector_env = {Environment.UAT: {'collection': Collection(id='C1233860183-EEDTEST'),\n",
-    "                      'granule_id': 'G1233860549-EEDTEST'}}\n",
+    "swath_projector_non_prod_information = {'collection': Collection(id='C1233860183-EEDTEST'),\n",
+    "                                        'granule_id': 'G1233860549-EEDTEST'}\n",
+    "\n",
+    "swath_projector_env = {Environment.LOCAL: swath_projector_non_prod_information,\n",
+    "                       Environment.SIT: swath_projector_non_prod_information,\n",
+    "                       Environment.UAT: swath_projector_non_prod_information}\n",
     "\n",
     "if harmony_environment in swath_projector_env:\n",
     "    swath_projector_info = swath_projector_env[harmony_environment]\n",
@@ -497,8 +500,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_subsetter_env = {Environment.UAT: {'collection': Collection(id='C1234714698-EEDTEST'),\n",
-    "                                       'granule_id': 'G1238479209-EEDTEST'}}\n",
+    "var_subsetter_non_prod_information = {'collection': Collection(id='C1234714698-EEDTEST'),\n",
+    "                                      'granule_id': 'G1238479209-EEDTEST'}\n",
+    "\n",
+    "var_subsetter_env = {Environment.LOCAL: var_subsetter_non_prod_information,\n",
+    "                     Environment.SIT: var_subsetter_non_prod_information,\n",
+    "                     Environment.UAT: var_subsetter_non_prod_information}\n",
     "\n",
     "if harmony_environment in var_subsetter_env:\n",
     "    var_subsetter_info = var_subsetter_env[harmony_environment]\n",
@@ -632,7 +639,7 @@
    "source": [
     "## Harmony OPeNDAP SubSetter (HOSS):\n",
     "\n",
-    "HOSS is currently deployed to Sandbox, SIT, UAT and production. However, it is only associated with collections in UAT. Requests will be made against the GHRC RSSMIF16D collection."
+    "HOSS is currently deployed to Sandbox, SIT, UAT and production. However, it is only associated with collections in UAT. Requests will be made against the RSSMIF16D collection, as mirrored in the EEDTEST CMR provider in UAT."
    ]
   },
   {
@@ -642,8 +649,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hoss_env = {Environment.UAT: {'collection': Collection(id='C1222931739-GHRC_CLOUD'),\n",
-    "                              'granule_id': 'G1240561151-GHRC_CLOUD'}}\n",
+    "hoss_non_prod_information = {'collection': Collection(id='C1238392622-EEDTEST'),\n",
+    "                             'granule_id': 'G1245840464-EEDTEST',\n",
+    "                             'temporal_collection': Collection(id='C1245662776-EEDTEST'),\n",
+    "                             'temporal_granule_id': 'G1245662797-EEDTEST'}\n",
+    "\n",
+    "hoss_env = {Environment.LOCAL: hoss_non_prod_information,\n",
+    "            Environment.SIT: hoss_non_prod_information,\n",
+    "            Environment.UAT: hoss_non_prod_information}\n",
     "\n",
     "if harmony_environment in hoss_env:\n",
     "    hoss_info = hoss_env[harmony_environment]\n",
@@ -880,6 +893,100 @@
   },
   {
    "cell_type": "markdown",
+   "id": "751e3ca8",
+   "metadata": {},
+   "source": [
+    "### HOSS temporal subset request:\n",
+    "\n",
+    "This request will combine a variable and temporal subset for a granule in the M2T1NXSLV collection (MERRA-2). The result will include the requested variable and the three associated dimension variables:\n",
+    "\n",
+    "* `/H1000`\n",
+    "* `/lat`\n",
+    "* `/lon`\n",
+    "* `/time`\n",
+    "\n",
+    "Furthermore, the temporal dimension and the science variable (`/H1000`) will be limited to the specified temporal range. MERRA-2 is gridded at hourly intervals, so the 4-hour time range (12pm - 4pm on 9th June 2021) will return 4 time values.\n",
+    "\n",
+    "For the granule being tested, all time values are expressed as minutes since 2021-06-09T00:30:00Z, and each grid-cell spans 30 minutes in either direction from the stated value (cells are centre-aligned). As such:\n",
+    "\n",
+    "* 12pm is the leading edge of the cell with a centre value of 12:30pm, which is 720 minutes since 00:30am.\n",
+    "* 4pm is the trailing edge of the cell with a centre value of 15:30pm, which is 900 minutes since 00:30am."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9e495e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_info is not None:\n",
+    "    hoss_temporal_file_name = 'hoss_temporal.nc4'\n",
+    "    hoss_temporal_request = Request(collection=hoss_info['temporal_collection'],\n",
+    "                                    granule_id=hoss_info['temporal_granule_id'],\n",
+    "                                    variables=['H1000'],\n",
+    "                                    temporal={'start': datetime(2021, 6, 9, 12, 0, 0),\n",
+    "                                              'stop': datetime(2021, 6, 9, 16, 0, 0)})\n",
+    "\n",
+    "\n",
+    "    submit_and_download(harmony_client, hoss_temporal_request, hoss_temporal_file_name)\n",
+    "    assert exists(all_no_bbox_file_name), 'Unsuccessful HOSS temporal request.'\n",
+    "\n",
+    "    expected_variables = ['/H1000', '/lat', '/lon', 'time']\n",
+    "    assert all_variables_present(hoss_temporal_file_name, expected_variables), 'Missing variables in HOSS temporal output'\n",
+    "    \n",
+    "    assert variable_values_all_in_range(hoss_temporal_file_name, '/time', 720.0, 900.0), 'Temporal dimension not correctly subsetted'\n",
+    "\n",
+    "    print_success('HOSS temporal request.')\n",
+    "else:\n",
+    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ee6a0ad",
+   "metadata": {},
+   "source": [
+    "### Named dimension subsetting:\n",
+    "\n",
+    "The following test will recreate a bounding box subset, however, it will explicitly name the dimension variables, rather than relying on the generic bounding box request parameters, `subset=lat(a:b)&subset=lon(c:d)`. For the RSSMIF16D the longitude and latitude dimensions are named:\n",
+    "\n",
+    "* `/latitude` and `/longitude`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980a1774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if hoss_info is not None:\n",
+    "    hoss_named_dims_file_name = 'hoss_named_dimensions.nc4'\n",
+    "    hoss_named_dims_request = Request(collection=hoss_info['collection'],\n",
+    "                                      granule_id=[hoss_info['granule_id']],\n",
+    "                                      variables=['atmosphere_cloud_liquid_water_content'],\n",
+    "                                      dimensions=[Dimension('latitude', -20, -5),\n",
+    "                                                  Dimension('longitude', 70, 85)])\n",
+    "\n",
+    "    submit_and_download(harmony_client, hoss_named_dims_request, hoss_named_dims_file_name)\n",
+    "    assert exists(hoss_named_dims_file_name), 'Unsuccessful HOSS named dimensions request.'\n",
+    "\n",
+    "    expected_variables = ['/atmosphere_cloud_liquid_water_content', '/latitude', '/longitude', '/time']\n",
+    "    assert all_variables_present(hoss_named_dims_file_name, expected_variables), 'Missing variables in HOSS output'\n",
+    "\n",
+    "    plot_variable(hoss_named_dims_file_name, '/atmosphere_cloud_liquid_water_content', '/longitude', '/latitude',\n",
+    "                  title='HOSS synchronous results.', colourbar_units='Columnar cloud liquid water (kg.m-2)',\n",
+    "                  x_label='Longitude (degrees east)', y_label='Latitude (degrees north)',\n",
+    "                  levels=np.linspace(-0.05, 2.45, 51))\n",
+    "\n",
+    "    print_success('HOSS named dimensions request.')\n",
+    "else:\n",
+    "    print(f'HOSS is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d5dbe0de",
    "metadata": {},
    "source": [
@@ -895,9 +1002,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hoss_maskfill_env = {Environment.UAT: {'collection': Collection(id='C1245618475-EEDTEST'),\n",
-    "                                       'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                       'granule_id': 'G1245649517-EEDTEST'}}\n",
+    "hoss_maskfill_non_prod_information = {'collection': Collection(id='C1245618475-EEDTEST'),\n",
+    "                                      'shape_file_path': 'amazon_basin.geo.json',\n",
+    "                                      'granule_id': 'G1245649517-EEDTEST'}\n",
+    "\n",
+    "hoss_maskfill_env = {Environment.LOCAL: hoss_maskfill_non_prod_information,\n",
+    "                     Environment.SIT: hoss_maskfill_non_prod_information,\n",
+    "                     Environment.UAT: hoss_maskfill_non_prod_information}\n",
     "\n",
     "if harmony_environment in hoss_maskfill_env:\n",
     "    hoss_maskfill_info = hoss_maskfill_env[harmony_environment]\n",
@@ -955,9 +1066,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maskfill_env = {Environment.UAT: {'collection': Collection(id='C1240150677-EEDTEST'),\n",
-    "                                  'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                  'granule_id': 'G1245558666-EEDTEST'}}\n",
+    "maskfill_non_prod_information = {'collection': Collection(id='C1240150677-EEDTEST'),\n",
+    "                                 'shape_file_path': 'amazon_basin.geo.json',\n",
+    "                                 'granule_id': 'G1245558666-EEDTEST'}\n",
+    "\n",
+    "maskfill_env = {Environment.LOCAL: maskfill_non_prod_information,\n",
+    "                Environment.SIT: maskfill_non_prod_information,\n",
+    "                Environment.UAT: maskfill_non_prod_information}\n",
     "\n",
     "if harmony_environment in maskfill_env:\n",
     "    maskfill_info = maskfill_env[harmony_environment]\n",
@@ -1031,11 +1146,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajectory_subsetter_env = {Environment.UAT: {'collection': Collection(id='C1242267295-EEDTEST'),\n",
-    "                                              'granule_id': 'G1242274836-EEDTEST',\n",
-    "                                              'shape_file_path': 'amazon_basin.geo.json',\n",
-    "                                              'variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
-    "                                                            '/BEAM0000/lat_lowestmode', '/BEAM0000/lon_lowestmode']}}\n",
+    "traj_sub_non_prod_information = {'collection': Collection(id='C1242267295-EEDTEST'),\n",
+    "                                 'granule_id': 'G1242274836-EEDTEST',\n",
+    "                                 'shape_file_path': 'amazon_basin.geo.json',\n",
+    "                                 'variables': ['/BEAM0000/agbd', '/BEAM0000/delta_time',\n",
+    "                                               '/BEAM0000/lat_lowestmode', '/BEAM0000/lon_lowestmode']}\n",
+    "\n",
+    "trajectory_subsetter_env = {Environment.LOCAL: traj_sub_non_prod_information,\n",
+    "                            Environment.SIT: traj_sub_non_prod_information,\n",
+    "                            Environment.UAT: traj_sub_non_prod_information}\n",
     "\n",
     "if harmony_environment in trajectory_subsetter_env:\n",
     "    trajectory_subsetter_info = trajectory_subsetter_env[harmony_environment]\n",
